Support for public Trello boards